# noty

./: alsa_source.vala  circle_of_fifths.vala  fsm.vala  gresource.xml  helpers.c  main.vala  major_notes.txt  meson.build  root_window.vala  root_window.xml
